# pyromu

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  release-wheels.yml  run-cibuildwheel.yml  run-sdist.yml  test.yml
pyromu/: __init__.py  _base_random.py  _helpers.py  _helpers_c.py  _helpers_py.py  _pyromu.pyi  _pyromu.pyx  _pyromu_c.pyi  _pyromu_c.pyx  _pyromu_py.py  _romu.h
pyromu/romu/: romu32.pyx  romu64.pyx
tests/: test_bench.py
tools/: bench.py
