[project]
name = "pyromu"
dynamic = ["version"]
description = "A Small Random Number Generator Built off the standard random module"
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "cython", "wheel"]

[tool.setuptools]
# Things I learned from cyares were brought over here...
zip-safe = false
# Important tip: use packages arguments they help with not needing a src directory...
packages = ['pyromu']

ext-modules = [
{name = "pyromu._pyromu_c", sources = ["pyromu/_pyromu_c.pyx"]}
]

[tool.setuptools.dynamic]
# NOTE: Change library name <cython_template_uv> when you have thought of what the name
# of your package should be.
version = {attr = "pyromu.__version__"}

[project.optional-dependencies]
tests = ["pytest"]

